[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
wasm-bindgen-futures = "0.4.33"
wasm-bindgen = { version="0.2.83" }
web-sys = {version = "0.3.56", features = ["HtmlInputElement"]}
wasm-logger = "0.2.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
base64 = "0.21.7"
ta = {version = "0.5.0", features = ["serde"]}
